[TBD]CORE-23049:Slider with live text mobile view alignment issue and in Arabic desktop view text are not align to right.

--- a/docroot/themes/custom/transac/alshaya_boots/sass/components/promo-blocks/_promo-blocks.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/sass/components/promo-blocks/_promo-blocks.scss
@@ -135,9 +135,12 @@
     }
 
     .field--name-field-button-link {
-      @include breakpoint($desktop) {
-        #{$left}: auto;
-        transform: none;
+      #{$left}: auto;
+      transform: none;
+
+      @include breakpoint($only-mobile) {
+        position: unset;
+        margin-bottom: 3rem;
       }
 
       a {
